--- a/authentication-service/src/main/resources/application.properties
+++ b/authentication-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url= jdbc:mysql://localhost:3306/user?createDatabaseIfNotExist=true
+server.port=8787
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
+app.jwtSecret=SecretKey
+app.jwtExpirationMs= 86400000
+spring.datasource.username= root
+spring.datasource.password= root
