--- a/authentication-service/src/main/resources/application.properties
+++ b/authentication-service/src/main/resources/application.properties
@@ -6,3 +6,9 @@ app.jwtSecret=SecretKey
 app.jwtExpirationMs= 86400000
 spring.datasource.username= root
 spring.datasource.password= root
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.cloud.compatibility-verifier.enabled=false
+
