--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,2 +1,11 @@
-spring.cloud.config.uri=http://localhost:8888
-spring.application.name=user-service
+#user-service
+server.port=8901
+
+#eureka-client
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.fetch-registry=true
+
+#mongo-common-config
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=hubbasketdb
