--- a/product-webapp/webapp/package.json
+++ b/product-webapp/webapp/package.json
@@ -7,10 +7,13 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@mui/material": "^5.14.1",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bootstrap": "^5.3.1",
     "html-react-parser": "^0.13.0",
     "install": "^0.13.0",
     "js-cookie": "^2.2.1",
@@ -20,6 +23,7 @@
     "react-dom": "^16.13.1",
     "react-fullscreen-loading": "0.0.4",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.10.1",
     "react-img-zoom": "^0.1.0",
     "react-lazyload": "^3.2.0",
     "react-loading-overlay": "^1.0.1",
@@ -37,6 +41,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.0.4",
     "sweetalert": "^2.1.2"
   },
   "scripts": {
